# zeta

./: .gitignore  30030_wheel_algorithm.z  AGENT91_GUIDANCE.md  AGENTS.md  AGENT_GITHUB_PROTOCOL.md  AGENT_TERMINATION_PROTOCOL.md  AGENT_TRAINING_SYSTEM.md  AI_VERIFICATION_PROTOCOL.md  ARRAYHEADER_STRATEGY.md  AUTONOMOUS_BULLETPROOF_MISSION.md  AUTONOMOUS_WORKFLOW.md  BOOTSTRAP_GUIDE.md  BRANCH_STRUCTURE_TRAINING.md  BUILD_INSTRUCTIONS.md  BULLETPROOF_FEATURES_COMPLETE.md  BULLETPROOF_MEMORY_ARCHITECTURE.md  CHANGELOG.md  COMMIT_MSG.txt  COMPETITION_BENCHMARK_COMPARISON_REPORT.md  COMPETITION_DECISION_REPORT.md  COMPETITION_SUBMISSION.md  COMPETITION_SUBMISSION_FINAL_SUMMARY.md  COMPETITION_SUBMISSION_PACKAGE_COMPLETE.md  COMPETITION_SUBMISSION_READY.md  COMPLETE_FIX_TRACKER.md  COMPTIME_IMPLEMENTATION_SUMMARY.md  CRITICAL_FILE_ISSUE.md  CTFE_IMPLEMENTATION_PLAN.md  CTFE_STATUS_AND_ROADMAP.md  Cargo.toml  DECISION_LOG.md  DEMONSTRATION.md  DOCUMENTATION_PLAN.md  DREAMS.md  Dockerfile  Dockerfile.competition.final  Dockerfile.test  EXECUTE_PUSH.bat  FAMILY_SKILLS_GUIDE.md  FILETREE  (+502 more)
.cargo/: config.toml
.clawhub/: lock.json
.github/: WORK_QUEUE.md
.openclaw/: workspace-state.json
PrimeZeta-github/: README.md  prime_original.z
Primes/PrimeZeta/solution_1/: Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SUBMISSION_SUMMARY.md  benchmark_simd.py  test_algorithm.py  test_prime_count.z  verify_counts.txt  verify_package.py
Primes/PrimeZeta/solution_1/src/: prime.z  prime_benchmark.rs  prime_enhanced.z  prime_final.z  prime_new.z  prime_simd.z  prime_simd_integrated.z
agent-identities/: SEM-IDENTITY.md
agent-knowledge/: MAC-KNOWLEDGE.md  SEM-KNOWLEDGE.md
agent-spawn-templates/: BASE-TEMPLATE.md  SEM-TEMPLATE.md
agent-workflows/: AGENT-WORKFLOW.md
benches/: compiler_bench.rs  identity_generics_bench.rs  integration_bench.rs  optimized_mir_bench.rs  performance_baseline.rs  quick_wins_bench.rs  regression_test.rs  run_ci_benchmarks.ps1  runtime_bench.rs  simd_benchmark.rs  temp_arithmetic.z  temp_control_flow.z  temp_factorial.z  temp_function_calls.z  temp_memory_ops.z  typecheck_bench.rs  zeta_bench.rs  zeta_benchmarks.rs
benchmarks/: comparison_framework.z  history_dashboard.html  history_tracker.rs  murphy_sieve_performance_benchmark.z  run_with_history.ps1
bootstrap/: 01_00_UTC_accountability_report.md  02_00_UTC_accountability_report.md  03_00_UTC_cron_completion_report.md  04_00_UTC_accountability_report.md  04_30_UTC_final_status.md  05_00_UTC_accountability_report.md  05_00_UTC_final_summary.md  05_30_UTC_cron_completion_report.md  05_30_UTC_summary.md  06_00_UTC_final_summary.md  06_30_UTC_accountability_report.md  06_30_UTC_cron_completion_report.md  07_30_UTC_accountability_report.md  08_00_UTC_accountability_report.md  08_00_UTC_cron_completion_report.md  09_30_UTC_accountability_report.md  11_30_UTC_accountability_report.md  14_00_UTC_accountability_report.md  15_00_UTC_accountability_report.md  15_30_UTC_accountability_report.md  16_00_UTC_final_summary.md  17_30_UTC_accountability_report.md  18_00_UTC_accountability_report.md  19_00_UTC_accountability_report.md  19_30_UTC_accountability_report.md  19_30_UTC_push_summary.md  20_00_UTC_accountability_report.md  20_00_UTC_final_summary.md  21_00_UTC_accountability_report.md  22_00_UTC_accountability_report.md  22_00_UTC_cron_summary.md  22_30_UTC_accountability_report.md  22_30_UTC_cron_completion_report.md  23_00_UTC_accountability_report.md  23_00_UTC_cron_completion_report.md  23_00_UTC_summary.md  ROADMAP.md  WORK_QUEUE.md  accountability_check_00_00.md  accountability_check_01_00.md  (+78 more)
competition_submission/: BENCHMARK_SUMMARY.md  Dockerfile  README.md  benchmark_results.txt  final_murphy_benchmark.rs  verify_submission.sh
design-docs/: AGENT_COORDINATION_PROTOCOL.md  ARCHITECTURE_DISCOVERY_TYPE_SYSTEMS.md  BENCHMARKING_GUIDE.md  GENERIC_CODEGEN_DESIGN.md  GENERIC_INTEGRATION_ARCHITECTURE.md  GENERIC_INTEGRATION_DETAILS.md  GENERIC_PARSER_ANALYSIS.md  GENERIC_TYPE_SYSTEM_DESIGN.md  GEN_PROGRESS_REPORT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_REPORT.md  LEX_FINAL_REPORT.md  MONOMORPHIZATION_IMPLEMENTATION_PLAN.md  PROGRESS_REPORT.md  SPRINT_STATIC_METHODS.md  STATIC_METHOD_TEST_SUITE_REPORT.md  STDLIB_PROGRESS.md  SYN_COORDINATION_PLAN.md  SYN_Integration_Report.md  TEST_CASES.md  UPDATED_CODEGEN_TESTS.md  VER_TEST_SUITE_COMPLETE.md  parser_analysis_report.md  performance_audit_report.md  performance_optimization_report.md  static_method_integration_architecture.md  static_methods_implementation_plan.md  wikipedia_notability_building_plan.md  wikipedia_update_draft.md
docs/: 01_ZETA_FEATURE_WHITEPAPER.md  03_COMPETITION_SUBMISSION_DOCUMENTATION.md  05_PERFORMANCE_COMPARISON.md  AGENTS.md  AGENT_TERMINATION_PROTOCOL.md  API-DESIGN-SPECIFICATION-PART2.md  API-DESIGN-SPECIFICATION.md  ARCHITECTURE-DELIVERABLES-SUMMARY.md  ARRAY_SYNTAX_DOCUMENTATION.md  ATTRIBUTE_SYNTAX_GUIDE.md  ATTRIBUTE_SYNTAX_IMPLEMENTATION_SUMMARY.md  BASIC_ATTRIBUTE_SYNTAX_IMPLEMENTED.md  BLOCKCHAIN-ARCHITECTURE-DESIGN.md  BLOCKCHAIN-README.md  BLOCKCHAIN-RESEARCH-REPORT.md  BOOTSTRAP_PLAN.md  BUILD_INSTRUCTIONS.md  COMPETITION_SUBMISSION_SUMMARY.md  COMPREHENSIVE_SUMMARY.md  DAILY_SUMMARY.md  DISTRIBUTED_SYSTEMS_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_STANDARDS.md  DOMINATION_MANIFESTO.md  Dockerfile.competition  Dockerfile.competition.fixed  Dockerfile.zeta-test  EPIC_WORK_LOG.md  FILETREE.md  FINAL-IMPLEMENTATION-REPORT.md  FINAL_GOAL_MISSION.md  (+62 more)
src/: ast.rs  (+65 more)
verification/: Cargo.toml  FORMAL_VERIFICATION_SPEC.md  INTEGRATION_GUIDE.md  VER_TO_ZAK_REPORT.md  test_verification.rs
verification/docs/: CI_INTEGRATION.md  PHASE_1_COMPLETION_REPORT.md  VERIFICATION_SPEC.md
verification/edge_cases/: const_parsing.md  float_literals.md
verification/examples/: murphy_sieve_verified.z
verification/integration/: v0_3_9_integration.rs
verification/property_tests/: type_system_proptest.rs
verification/src/: annotations.rs  lib.rs  refinement.rs  refinement_complete.rs  solver.rs  vcgen.rs
(+2306 files in other folders)
