# Zeta compiler package manifest.
# Defines package metadata, dependencies, and benchmarks.
[package]
# Package name.
name = "zetac"
# Current version.
version = "0.3.0"
# Rust edition.
edition = "2024"
# Minimum Rust version.
rust-version = "1.92.0"
# License type.
license = "MIT"
# Brief description.
description = "The final systems language"
# Repository URL.
repository = "https://github.com/murphsicles/zeta"
# Search keywords.
keywords = ["programming", "language", "code", "compiler", "lang"]
# Categories for classification.
categories = ["compilers", "development-tools"]
# README file.
readme = "README.md"

# Runtime and build dependencies.
[dependencies]
# Date and time handling.
chrono = { version = "0.4.43", features = ["serde"] }
# Sum type for two variants.
either = "1.15.0"
# LLVM bindings.
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
# Lazy static initialization.
lazy_static = "1.5.0"
# C library interfaces.
libc = "0.2.180"
# Parsing combinators.
nom = "8.0.0"
# CPU count detection.
num_cpus = "1.17.0"
# Numeric traits.
num-traits = "0.2.19"
# Parallel computing.
rayon = "1.11.0"
# HTTP client with rustls TLS (no native-tls)
reqwest = { version = "0.13.1", features = ["blocking", "json", "rustls"], default-features = false }
# TLS library for reqwest
rustls = "0.23.36"
# Serialization framework.
serde = { version = "1.0.228", features = ["derive"] }
# JSON handling.
serde_json = "1.0.149"
# Asynchronous runtime.
tokio = { version = "1.40.0", features = ["full"] }
# Parallel trait solver components.
chalk-ir = "0.104.0"
chalk-solve = "0.104.0"
chalk-recursive = "0.104.0"

# Benchmarking framework.
criterion = { version = "0.8.1", features = ["html_reports"] }

# Benchmark configurations.
[[bench]]
# Benchmark name.
name = "zeta_bench"
# Disable default harness.
harness = false
