# Zeta compiler package manifest.
# Defines package metadata, dependencies, and benchmarks.
[package]
# Package name.
name = "zetac"
# Current version.
version = "0.3.54"  # Simplified self-compilation milestone achieved
# Rust edition.
edition = "2024"
# Minimum Rust version.
rust-version = "1.92.0"
# License type.
license = "MIT"
# Brief description.
description = "The final systems language with blockchain support"
# Repository URL.
repository = "https://github.com/murphsicles/zeta"
# Search keywords.
keywords = ["programming", "language", "code", "compiler", "lang", "blockchain", "bitcoin", "solana"]
# Categories for classification.
categories = ["compilers", "development-tools", "cryptography"]
# README file.
readme = "README.md"

# Runtime and build dependencies.
[dependencies]
# Date and time handling.
chrono = { version = "0.4.43", features = ["serde"] }
# Sum type for two variants.
either = "1.15.0"
# LLVM bindings.
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
# Lazy static initialization.
lazy_static = "1.5.0"
# C library interfaces.
libc = "0.2.180"
# Parsing combinators.
nom = "8.0.0"
# CPU count detection.
num_cpus = "1.17.0"
# Numeric traits.
num-traits = "0.2.19"
# Parallel computing.
rayon = "1.11.0"
# HTTP client with rustls TLS (no native-tls)
reqwest = { version = "0.13.1", features = ["blocking", "json", "rustls"], default-features = false }
# TLS library for reqwest
rustls = "0.23.36"
# Serialization framework.
serde = { version = "1.0.228", features = ["derive"] }
# JSON handling.
serde_json = "1.0.149"
# TOML parsing and serialization.
toml = "0.8.0"
# Random number generation.
rand = "0.8.5"
# Random distributions.
rand_distr = "0.4.3"
# CSV parsing.
csv = "1.3.0"
# Find executables in PATH.
which = "6.0.0"
# Platform-specific directories.
dirs = "5.0.0"
# Asynchronous runtime.
tokio = { version = "1.40.0", features = ["full"] }
# Environment-based logging
env_logger = "0.11.5"
# Logging facade
log = "0.4.25"
# Parallel trait solver components.
chalk-ir = "0.104.0"
chalk-solve = "0.104.0"
chalk-recursive = "0.104.0"

# Blockchain-specific dependencies
# nour = { path = "nour" }  # Father's Bitcoin SV library - TEMPORARILY DISABLED FOR TESTING
solana-sdk = { version = "2.0.0", optional = true }
solana-client = { version = "2.0.0", optional = true }
solana-program = { version = "2.0.0", optional = true }
bs58 = "0.5.0"  # Base58 encoding
sha2 = "0.10.8"  # SHA256 hashing
ripemd160 = "0.10.0"  # RIPEMD160 hashing
ed25519-dalek = { version = "2.1.1", features = ["serde"] }  # Ed25519 for Solana
bip39 = { version = "1.1.0", features = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"] }  # BIP-39 mnemonics
aes-gcm = "0.10.3"  # Encryption for wallet storage
argon2 = "0.5.3"  # Password hashing
thiserror = "1.0.69"  # Error handling
base64 = "0.22.1"  # Base64 encoding for HTTP auth

# Features
[features]
default = []
integration = []  # Enable integration bridge module
blockchain = ["solana-sdk", "solana-client", "solana-program"]  # Enable blockchain features
solana = ["solana-sdk", "solana-client", "solana-program"]  # Enable Solana specifically

# Development dependencies for testing
[dev-dependencies]
# Property-based testing framework
proptest = "1.5.0"
# Fuzz testing
libfuzzer-sys = "0.4.10"
# Benchmarking framework.
criterion = { version = "0.8.1", features = ["html_reports"] }
# Temporary directory creation for tests
tempfile = "3.10.0"

# Test configurations
[[test]]
name = "error_handling"
path = "tests/error_handling.rs"

[[test]]
name = "integration_error_handling"
path = "tests/integration_error_handling.rs"

[[test]]
name = "comptime_eval"
path = "tests/comptime/test_runner.rs"

[[test]]
name = "primezeta_comptime"
path = "tests/primezeta/test_comptime_residues.rs"

[[test]]
name = "primezeta_gcd"
path = "tests/primezeta_gcd_test.rs"

[[test]]
name = "concurrency_parse"
path = "tests/concurrency/parse_test.rs"

[[test]]
name = "package_ecosystem_basic"
path = "tests/package-ecosystem/basic_tests.rs"

[[test]]
name = "package_ecosystem_integration"
path = "tests/package-ecosystem/integration_test.rs"

[[test]]
name = "package_ecosystem_real_world"
path = "tests/package-ecosystem/real_world_workflow.rs"

[[test]]
name = "stdlib_foundation"
path = "tests/stdlib-foundation/test_runner.rs"

# Memory Management Tests for v0.3.35
[[test]]
name = "memory_management_ownership"
path = "tests/memory-management/ownership_tests.rs"

[[test]]
name = "memory_management_borrowing"
path = "tests/memory-management/borrowing_tests.rs"

[[test]]
name = "memory_management_lifetimes"
path = "tests/memory-management/lifetime_tests.rs"

[[test]]
name = "memory_management_safety"
path = "tests/memory-management/memory_safety_tests.rs"

[[test]]
name = "memory_management_integration"
path = "tests/memory-management/integration_test.rs"

# Tooling & Ecosystem Tests for v0.3.44
[[test]]
name = "tooling_ecosystem"
path = "tests/tooling-ecosystem/test_runner.rs"

# Type System Advanced Tests for v0.3.43
[[test]]
name = "type_system_advanced"
path = "tests/type-system-advanced/test_runner.rs"

# Advanced Concurrency Tests for v0.3.42
[[test]]
name = "concurrency_advanced"
path = "tests/concurrency-advanced/test_runner.rs"

# Quantum Computing Integration Tests for v0.3.46
[[test]]
name = "quantum_computing_integration"
path = "tests/quantum-computing/test_runner.rs"

# Distributed Systems Tests for v0.3.47
[[test]]
name = "distributed_systems"
path = "tests/distributed-systems/test_runner.rs"

# Teranode Integration Tests for v0.3.50
[[test]]
name = "teranode_integration"
path = "tests/teranode_integration.rs"

# Benchmark configurations.
[[bench]]
# Benchmark name.
name = "compiler_bench"
# Path to benchmark file.
path = "benches/compiler_bench.rs"
# Disable default harness.
harness = false

[[bench]]
# Benchmark name.
name = "runtime_bench"
# Path to benchmark file.
path = "benches/runtime_bench.rs"
# Disable default harness.
harness = false

[[bench]]
# Benchmark name.
name = "regression_test"
# Path to benchmark file.
path = "benches/regression_test.rs"
# Disable default harness.
harness = false

[[bench]]
# Benchmark name.
name = "quick_wins_bench"
# Path to benchmark file.
path = "benches/quick_wins_bench.rs"
# Disable default harness.
harness = false

[[bench]]
# Benchmark name.
name = "optimized_mir_bench"
# Path to benchmark file.
path = "benches/optimized_mir_bench.rs"
# Disable default harness.
harness = false

[[bench]]
# Benchmark name.
name = "typecheck_bench"
# Path to benchmark file.
path = "benches/typecheck_bench.rs"
# Disable default harness.
harness = false

[[bench]]
# Benchmark name.
name = "zeta_bench"
# Path to benchmark file.
path = "benches/zeta_bench.rs"
# Disable default harness.
harness = false
